Switch resources from URL to URI.